--- a/Contact.html
+++ b/Contact.html
@@ -3,16 +3,16 @@
  <head>
   <title>Contact Page</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href=
+  <link rel="stylesheet" href= "style.css">
  </head>
  <body>
   <header>
-   <h2>Contact Us<h2>
+   <h1>Contact Us<h1>
   </header>
   <p>Email Us at:</p>
   <br />
-  <a href = "#">RestuarantBest@</a>
+  <a href = "#">RestuarantBest@wins.com</a>
   <hr />
-  <p>Phone Number: </p>
+  <p>Phone Number: (434) 656-1122</p>
  </body>
 <html>
