--- a/Contact.html
+++ b/Contact.html
@@ -6,6 +6,29 @@
   <link rel="stylesheet" href= "style.css">
  </head>
  <body>
+  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">Restaurant</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Deals</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Menu</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<br clear="all>"
   <header>
    <h1>Contact Us<h1>
   </header>
