--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,7 @@
   <title>Contact Page</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href= "style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  </head>
  <body>
   <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
