--- a/Contact.html
+++ b/Contact.html
@@ -33,7 +33,7 @@
   <header>
    <h1>Contact Us<h1>
   </header>
-    <img src="Phone.jpg" style="width:100%;">
+    <img src="Phone.jpg">
   <p>Email Us at:</p>
   <br />
   <a href = "#">RestuarantBest@wins.com</a>
