--- a/Contact.html
+++ b/Contact.html
@@ -33,11 +33,10 @@
   <header>
    <h1>Contact Us<h1>
   </header>
-    <img src="Phone.jpg">
+    <img src="Phone.jpg" align="right">
   <p>Email Us at:</p>
-  <br />
   <a href = "#">RestuarantBest@wins.com</a>
-  <hr />
+  <br />
   <p>Phone Number: (434) 656-1122</p>
  </body>
 <html>
